test: update a11y | jmn

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -32,7 +32,7 @@
         </p-button>
       </header>
 
-      <main class="flex flex-col flex-grow min-h-0 overflow-y-auto p-static-sm gap-static-md">
+      <div class="flex flex-col flex-grow min-h-0 overflow-y-auto p-static-sm gap-static-md">
 
         <div class="grid content-start m-static-md mt-static-md animate-slide-up relative z-10 flex-shrink-0">
           <p-icon class="mb-static-md" theme="dark" name="ai-spark-filled" size="x-large"></p-icon>
@@ -61,7 +61,7 @@
           </a>
         </div>
 
-      </main>
+      </div>
 
       <footer class="c-footer px-static-md pt-static-md flex-shrink-0 pb-4">
         <p-link theme="dark" variant="primary" class="w-full" href="#template-intro">Sign in</p-link>
@@ -80,7 +80,7 @@
         </p-button>
       </header>
 
-      <main class="flex flex-col flex-grow min-h-0 overflow-y-auto p-static-sm gap-static-md">
+      <div class="flex flex-col flex-grow min-h-0 overflow-y-auto p-static-sm gap-static-md">
 
         <div class="grid content-start m-static-md mt-static-md animate-slide-up relative z-10 flex-shrink-0">
           <p-icon class="mb-static-md" theme="dark" name="ai-spark-filled" size="x-large"></p-icon>
@@ -109,7 +109,7 @@
           </a>
         </div>
 
-      </main>
+      </div>
 
       <div class="c-footer">
 
