feat: improve ai assistant widget markup and styles | sas

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -13,14 +13,20 @@
       <h2 class="prose-display-sm">AI Assistant Widget</h2>
       <p class="prose-text-sm">
         Built with <b>Porsche Design System</b>
-        <a href="https://designsystem.porsche.com/v3/components/introduction/"
+        <a
+          class="underline focus-visible:outline outline-focus rounded-sm px-static-xs -mx-static-xs transition-colors hover:bg-hover"
+          href="https://designsystem.porsche.com/v3/components/introduction/"
           >Components</a
         >
         and styled with
-        <a href="https://designsystem.porsche.com/v3/tailwindcss/introduction/"
+        <a
+          class="underline focus-visible:outline outline-focus rounded-sm px-static-xs -mx-static-xs transition-colors hover:bg-hover"
+          href="https://designsystem.porsche.com/v3/tailwindcss/introduction/"
           >Tailwind CSS</a
         >. First, get the Porsche Design System
-        <a href="https://designsystem.porsche.com/v3/developing/introduction/"
+        <a
+          class="underline focus-visible:outline outline-focus rounded-sm px-static-xs -mx-static-xs transition-colors hover:bg-hover"
+          href="https://designsystem.porsche.com/v3/developing/introduction/"
           >up & running</a
         >. Then, simply copy the provided markup and styles directly into your
         project. Only the necessary JavaScript logic requires custom
@@ -94,7 +100,7 @@
           </header>
           <div class="ai-content content-end grid gap-static-lg">
             <div
-              class="grid gap-static-md mx-static-md animate-ai-fade-in-slide-up"
+              class="grid gap-static-md mt-static-md mx-static-md animate-ai-fade-in-slide-up"
             >
               <p-icon
                 theme="dark"
@@ -183,7 +189,7 @@
           </header>
           <div class="ai-content content-end grid gap-static-lg">
             <div
-              class="grid gap-static-md mx-static-md animate-ai-fade-in-slide-up"
+              class="grid gap-static-md my-static-md mx-static-md animate-ai-fade-in-slide-up"
             >
               <p-icon
                 theme="dark"
