feat(ai-assistant-widget): adjust header alignment | sas

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -1029,7 +1029,7 @@
               Some label
             </p-button>
           </div>
-          <div class="ai-content my-static-md mx-static-lg grid gap-fluid-sm">
+          <div class="ai-content m-static-lg grid gap-fluid-sm">
             <h2 class="prose-heading-lg font-normal">My inquiries</h2>
             <div class="my-static-md grid gap-static-md z-1">
               <p-link-pure theme="dark" href="#template-chat" icon="chat"
@@ -1083,7 +1083,7 @@
               Some label
             </p-button>
           </div>
-          <div class="ai-content my-static-md mx-static-lg grid gap-fluid-sm">
+          <div class="ai-content m-static-lg grid gap-fluid-sm">
             <h2 class="prose-heading-lg font-normal">
               Porsche Experience Center<br />Hockenheimring
             </h2>
@@ -1142,7 +1142,7 @@
               Some label
             </p-button>
           </div>
-          <div class="ai-content my-static-md mx-static-lg grid gap-fluid-sm">
+          <div class="ai-content m-static-lg grid gap-fluid-sm">
             <h2 class="prose-heading-lg font-normal">
               AI Assistant Disclaimer
             </h2>
