--- a/src/sdx26-finder/index.html
+++ b/src/sdx26-finder/index.html
@@ -1422,372 +1422,96 @@
       </div>
     </main>
 
-    <footer class="col-full grid grid-cols-subgrid dark py-fluid-lg bg-base">
-      <form
-        class="col-extended grid xs:grid-cols-[repeat(2,minmax(0,1fr))] md:grid-cols-[repeat(3,minmax(0,1fr))] gap-fluid-md"
-        action="#"
-        onsubmit="return false;"
-      >
-        <p-select
-          class="[--p-select-background-color:transparent]"
-          theme="dark"
-          name="region"
-          label="Change your delivery country"
-          value="germany"
+    <footer
+      class="dark col-full grid grid-cols-subgrid py-fluid-lg bg-base text-primary"
+    >
+      <div class="col-extended grid gap-fluid-lg">
+        <a
+          class="justify-self-start rounded-[10px] outline-focus outline-offset-2 focus-visible:outline"
+          target="_blank"
+          href="https://apps.apple.com/app/apple-store/id1542743354?pt=61219802&amp;ct=footer&amp;mt=8"
         >
-          <p-optgroup label="Asia">
-            <p-select-option value="china"
-              ><img
-                src="/assets/flags/china.svg"
-                alt=""
-              />China</p-select-option
-            >
-            <p-select-option value="japan"
-              ><img
-                src="/assets/flags/japan.svg"
-                alt=""
-              />Japan</p-select-option
-            >
-            <p-select-option value="south-korea"
-              ><img src="/assets/flags/south-korea.svg" alt="" />South Korea
-            </p-select-option>
-          </p-optgroup>
-          <p-optgroup label="Europe">
-            <p-select-option value="austria"
-              ><img
-                src="/assets/flags/austria.svg"
-                alt=""
-              />Austria</p-select-option
-            >
-            <p-select-option value="france"
-              ><img
-                src="/assets/flags/france.svg"
-                alt=""
-              />France</p-select-option
-            >
-            <p-select-option value="germany"
-              ><img
-                src="/assets/flags/germany.svg"
-                alt=""
-              />Germany</p-select-option
-            >
-            <p-select-option value="great-britain"
-              ><img src="/assets/flags/great-britain.svg" alt="" />Great Britain
-            </p-select-option>
-            <p-select-option value="italy"
-              ><img
-                src="/assets/flags/italy.svg"
-                alt=""
-              />Italy</p-select-option
-            >
-            <p-select-option value="portugal"
-              ><img
-                src="/assets/flags/portugal.svg"
-                alt=""
-              />Portugal</p-select-option
-            >
-            <p-select-option value="spain"
-              ><img
-                src="/assets/flags/spain.svg"
-                alt=""
-              />Spain</p-select-option
-            >
-          </p-optgroup>
-          <p-optgroup label="North America">
-            <p-select-option value="canada"
-              ><img
-                src="/assets/flags/canada.svg"
-                alt=""
-              />Canada</p-select-option
-            >
-            <p-select-option value="usa"
-              ><img src="/assets/flags/usa.svg" alt="" />USA</p-select-option
-            >
-          </p-optgroup>
-        </p-select>
-      </form>
-      <div
-        class="col-extended grid xs:grid-cols-[repeat(2,minmax(0,1fr))] md:grid-cols-[repeat(3,minmax(0,1fr))] gap-x-fluid-md gap-y-fluid-lg mt-fluid-sm mb-fluid-lg"
-      >
-        <div class="flex flex-col gap-fluid-sm">
-          <h5 class="prose-text-2xs text-contrast-medium">Legal Services</h5>
-          <ul class="grid gap-fluid-sm">
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Terms and Conditions
-              </p-link-pure>
-            </li>
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Privacy Notice
-              </p-link-pure>
-            </li>
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                California Privacy
-              </p-link-pure>
-            </li>
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Imprint and Legal Notice
-              </p-link-pure>
-            </li>
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Accessibility Statement
-              </p-link-pure>
-            </li>
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Open Source Software Notice
-              </p-link-pure>
-            </li>
-          </ul>
-        </div>
-        <div class="flex flex-col gap-fluid-sm">
-          <h5 class="prose-text-2xs text-contrast-medium">Porsche Design</h5>
-          <ul class="grid gap-fluid-sm">
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Press
-              </p-link-pure>
-            </li>
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Jobs and Careers
-              </p-link-pure>
-            </li>
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Studio F. A. Porsche
-              </p-link-pure>
-            </li>
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Data Privacy
-              </p-link-pure>
-            </li>
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Timepieces Warranty & Service
-              </p-link-pure>
-            </li>
-          </ul>
-        </div>
-        <div class="flex flex-col gap-fluid-sm">
-          <h5 class="prose-text-2xs text-contrast-medium">Online Services</h5>
-          <ul class="grid gap-fluid-sm">
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                My Orders
-              </p-link-pure>
-            </li>
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Porsche Homepage
-              </p-link-pure>
-            </li>
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Porsche Car Configurator
-              </p-link-pure>
-            </li>
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Porsche New and Pre-Owned Vehicles
-              </p-link-pure>
-            </li>
-            <li>
-              <p-link-pure theme="dark" href="#" icon="none">
-                Compare Porsche models
-              </p-link-pure>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div
-        class="col-extended grid sm:grid-cols-[auto_minmax(0,1fr)] items-center gap-x-fluid-lg gap-y-static-lg"
-      >
-        <div class="flex gap-fluid-md">
-          <p-link-pure
-            theme="dark"
-            href="#"
-            icon="logo-instagram"
-            hide-label="true"
-            size="medium"
-            class="p-static-sm -m-static-sm"
-          >
-            Some label
-          </p-link-pure>
-          <p-link-pure
-            theme="dark"
-            href="#"
-            icon="logo-facebook"
-            hide-label="true"
-            size="medium"
-            class="p-static-sm -m-static-sm"
-          >
-            Some label
-          </p-link-pure>
-          <p-link-pure
-            theme="dark"
-            href="#"
-            icon="logo-x"
-            hide-label="true"
-            size="medium"
-            class="p-static-sm -m-static-sm"
-          >
-            Some label
-          </p-link-pure>
-          <p-link-pure
-            theme="dark"
-            href="#"
-            icon="logo-pinterest"
-            hide-label="true"
-            size="medium"
-            class="p-static-sm -m-static-sm"
-          >
-            Some label
-          </p-link-pure>
-          <p-link-pure
-            theme="dark"
-            href="#"
-            icon="logo-youtube"
-            hide-label="true"
-            size="medium"
-            class="p-static-sm -m-static-sm"
-          >
-            Some label
-          </p-link-pure>
-        </div>
-        <div class="flex gap-fluid-xs">
-          <a
-            href="#"
-            class="focus-visible:outline outline-focus outline-offset-2 rounded-sm"
-          >
-            <img
-              src="https://images.ctfassets.net/1oyzmkwpf3d5/hskK1tzN0CS8cdGIttugu/883187acee1c66e7d4593141f3e659c3/Visa.svg"
-              alt="visa logo"
-            />
-          </a>
-          <a
-            href="#"
-            class="focus-visible:outline outline-focus outline-offset-2 rounded-sm"
-          >
-            <img
-              src="https://images.ctfassets.net/1oyzmkwpf3d5/34g5LXmVhTzseATJL7CLFj/501eba81ff4787357277faff4ea04f4d/Master__1_.svg"
-              alt="master card logo"
-            />
-          </a>
-          <a
-            href="#"
-            class="focus-visible:outline outline-focus outline-offset-2 rounded-sm"
-          >
-            <img
-              src="https://images.ctfassets.net/1oyzmkwpf3d5/4NeGQiGeYT5VZ3G591li1k/c12d0cc589f608a6db3d3e7d2aae0255/PayPal.svg"
-              alt="paypal logo"
-            />
-          </a>
-        </div>
-      </div>
-      <div class="col-extended grid gap-fluid-md mt-fluid-md">
-        <p class="prose-text-2xs text-contrast-medium">
-          The consumption and emission values stated were determined in
-          accordance with the legally prescribed measurement procedures. Since
-          September 1, 2017, certain new vehicles have been type-approved in
-          accordance with the Worldwide Harmonized Vehicles Test Procedure
-          (WLTP), a more realistic test procedure for measuring fuel/electricity
-          consumption and CO₂ emissions. Since September 1, 2018, the WLTP has
-          replaced the New European Driving Cycle (NEDC). Due to the more
-          realistic testing conditions, the fuel/electricity consumption and CO₂
-          emission values measured according to the WLTP are, in many cases,
-          higher than those measured according to the NEDC. As a result, vehicle
-          taxation may change accordingly starting September 1, 2018. Further
-          information on the differences between WLTP and NEDC can be found at
-          www.porsche.com/wltp.
-        </p>
-        <p class="prose-text-2xs text-contrast-medium">
-          Currently, regardless of the applied type-approval procedure, it
-          remains mandatory to communicate NEDC values. The additional
-          disclosure of WLTP values may be done on a voluntary basis until their
-          mandatory use. In the case of new vehicles type-approved according to
-          WLTP, NEDC values are derived from WLTP values and stated during the
-          transitional period. Where NEDC values are stated as ranges, they do
-          not refer to a specific individual vehicle and are not part of the
-          offer. They serve solely for comparison purposes between different
-          vehicle types. Optional equipment and accessories (attachments, tire
-          formats, etc.) can alter relevant vehicle parameters such as weight,
-          rolling resistance, and aerodynamics, and can influence
-          fuel/electricity consumption, CO₂ emissions, and performance values of
-          a vehicle in addition to weather and traffic conditions and individual
-          driving behavior. Further information on the official fuel/electricity
-          consumption and official specific CO₂ emissions of new passenger cars
-          can be found in the "Guide on fuel consumption, CO₂ emissions and
-          electricity consumption of new passenger cars," available free of
-          charge at all sales outlets and from DAT.
-        </p>
-        <p class="prose-text-2xs text-contrast-medium">
-          Neither the number of active users of this Porsche Connect Store nor
-          the number of active users of the App Center available in the
-          connected vehicle (Macan electric) upon activation of the Connect
-          services exceeds the threshold of 45 million active users in the
-          European Union as defined by the Digital Services Act (DSA). Important
-          information regarding fully electric Porsche models can be found here.
-        </p>
-      </div>
-      <div
-        class="col-extended grid gap-fluid-md justify-items-center mt-fluid-md"
-      >
-        <p-wordmark theme="dark"></p-wordmark>
-        <p class="prose-text-2xs text-contrast-medium">
-          © 2025 Porsche Sales and Marketplace, Inc.
-        </p>
-        <ul class="flex flex-wrap justify-center gap-fluid-md">
-          <li>
+          <img
+            alt="Download on the App Store"
+            loading="lazy"
+            width="161"
+            height="54"
+            src="/assets/app-store-badge.svg"
+          />
+        </a>
+        <div class="grid gap-static-md">
+          <p>
+            © 2025 Porsche Sales &amp; Marketplace, Inc.
             <p-link-pure
               theme="dark"
-              href="#"
               icon="none"
-              size="x-small"
               underline="true"
+              href="https://shop.porsche.com/us/en/psm"
+              >Imprint and Legal Notice.</p-link-pure
             >
-              Legal notice
-            </p-link-pure>
-          </li>
-          <li>
             <p-link-pure
               theme="dark"
-              href="#"
               icon="none"
-              size="x-small"
               underline="true"
+              href="https://prod-slppecomm-marketplaces.s3.eu-central-1.amazonaws.com/legal-documents/us/en-US/TermsAndConditions.pdf"
+              >Terms and Conditions.</p-link-pure
             >
-              Privacy notice
-            </p-link-pure>
-          </li>
-          <li>
             <p-link-pure
               theme="dark"
-              href="#"
               icon="none"
-              size="x-small"
               underline="true"
+              href="https://assets-prod.porsche.com/market/legal-documents/us/en-US/DataPrivacy.pdf"
+              >Privacy Notice.</p-link-pure
             >
-              Accessibility Statement
-            </p-link-pure>
-          </li>
-          <li>
             <p-link-pure
               theme="dark"
-              href="#"
               icon="none"
-              size="x-small"
               underline="true"
+              href="https://prod-slppecomm-marketplaces.s3.eu-central-1.amazonaws.com/legal-documents/us/en-US/DataPrivacy.pdf#page=6"
+              >California Privacy.</p-link-pure
             >
-              Open Source Software Notice
-            </p-link-pure>
-          </li>
-        </ul>
+            <p-link-pure
+              theme="dark"
+              icon="none"
+              underline="true"
+              href="https://www.porsche.com/usa/privacy-policy/contact/"
+              >Do Not Sell or Share My Personal Information.</p-link-pure
+            >
+            <p-link-pure
+              theme="dark"
+              icon="none"
+              underline="true"
+              href="https://finder.porsche.com/licenses"
+              >Open Source Software Notice.</p-link-pure
+            >
+            <p-link-pure
+              theme="dark"
+              icon="none"
+              underline="true"
+              href="https://connect-store.porsche.com/us/en/business_human_rights"
+              >Business &amp; Human Rights.</p-link-pure
+            >
+            <p-link-pure
+              theme="dark"
+              icon="none"
+              underline="true"
+              href="https://www.porsche.com/usa/accessibilitystatement/"
+              >Accessibility Statement.</p-link-pure
+            >
+          </p>
+          <p>
+            Total Retail Price is the Manufacturer's Suggested Retail Price
+            (MSRP) plus options and manufacturer charges and taxes. It excludes
+            tax, title, registration, dealer charges, and potential tariffs.
+            Dealer sets actual selling price.
+          </p>
+          <p>
+            These images are configurator-generated and may not accurately
+            represent the vehicle. Please contact your Porsche Center for more
+            details.
+          </p>
+        </div>
+        <p-wordmark class="justify-self-center" theme="dark"></p-wordmark>
       </div>
     </footer>
 
